plugins {
	id 'org.springframework.boot' version '3.1.4'
	id 'io.spring.dependency-management' version '1.1.3'
	id 'java'
}

group = 'io.lw900925'
version = ''

java {
	sourceCompatibility = '21'
}

repositories {
	maven {
		url "https://maven.aliyun.com/nexus/content/groups/public"
	}
	mavenLocal()
	mavenCentral()
}


dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'com.squareup.okhttp3:okhttp:4.11.0'
	implementation 'com.google.guava:guava:30.1-jre'
	implementation 'com.google.code.gson:gson:2.8.9'
	implementation 'org.apache.commons:commons-lang3:3.11'
	implementation 'cn.hutool:hutool-all:5.8.22'
	implementation 'javax.annotation:javax.annotation-api:1.3.2'


	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
}

test {
	useJUnitPlatform()
}
